# Agentic_AI

Shoe_Shopping_Agent/: .gitignore  connection.py  main.py  pyproject.toml
crpyto_price_chainlit/: .env  main.py  requirements.txt
crypto_price_chainlit/: .gitignore  main.py  pyproject.toml
dictionary_agent/: .gitignore  main.py  pyproject.toml
input_guardrail/: connection.py  main.py  pyproject.toml
local context/: main.py  pyproject.toml
poetry agent handoffs/: main.py  pyproject.toml
profolio/: package-lock.json  package.json
profolio/app/: globals.css  layout.tsx  page.tsx
profolio/components/Home/: Home.tsx
profolio/components/Home/Client/: Client.tsx  ClientCard.tsx
profolio/components/Home/Footer/: Footer.tsx
profolio/components/Home/Helper/: Scrolltoptodown.tsx
profolio/components/Home/Hero/: Hero.tsx
profolio/components/Home/Navbar/: Mobilenav.tsx  Nav.tsx  ResponsiveNav.tsx
profolio/components/Home/Project/: Project.tsx  ProjectCard.tsx
profolio/components/Home/Resume/: Resume.tsx  ResumeCard.tsx
profolio/components/Home/Service/: Service.tsx  ServicesCard.tsx
profolio/components/Home/Skill/: Skill.tsx
profolio/components/Home/blog/: Blog.tsx  BlogCard.tsx
profolio/components/Home/contact/: Contact.tsx
profolio/data/: constant.ts
translater_agent/: main.py  pyproject.toml
