[project]
name = "dictionary-agent"
version = "0.1.0"
description = "A Chainlit-based dictionary agent using Gemini API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.0",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "httpx>=0.27.0"
]
